crates/plotnik-lib/tests/03-analyze/duplicates/duplicate_capture_in_sequence.txt
Q = {
  (a) @x
  (b) @x
}
------------------ DIAGNOSTICS -------------------
error: capture `@x` already defined in this scope
 --> query.ptk:3:3
  |
3 |   (b) @x
  |   ^^^^^^
  |
help: rename one capture, or use an enum if they are mutually exclusive branches
-------------------- SYMBOLS ---------------------
Q
